# throtty

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  __init__.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
core/: __init__.py  limiter.py  utils.py
core/_internals/: __init__.py  config.py
core/_internals/application/use_cases/: rate_limit.py
core/_internals/domain/exceptions/: exception.py
core/_internals/domain/interfaces/: rate_limit.py  storage.py
core/_internals/domain/models/: rate_limit_result.py
core/_internals/domain/services/algorithm/: sliding_window_counter.py  sliding_window_log.py  token_bucket.py
core/_internals/infrastructure/storage/in_mem/repo/: in_mem_impl.py
core/_internals/infrastructure/storage/redis/repo/: redis_impl.py
core/_internals/infrastructure/throtty/: core.py
tests/: throtty_core_test.py  throtty_test.py
